--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,7 +19,8 @@
 		"vscode": {
 			"extensions": [
 				"angular.ng-template",
-				"ms-azuretools.vscode-docker"
+				"ms-azuretools.vscode-docker",
+				"motivesoft.vscode-uuid-generator"
 			]
 		}
 	},
