Show job achievements to job history

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,15 +18,15 @@ jobs:
       - run: npm ci
       # - run: npm run test:headless
       - run: npm run build
-      ## https://github.com/marketplace/actions/ftp-deploy
-      # - name: FTP Deploy
-      #   uses: SamKirkland/FTP-Deploy-Action@v4.3.5
-      #   with:
-      #     server: {{ env.FTP_SERVER }}
-      #     username: {{ env.FTP_USERNAME }}
-      #     password: {{ secrets.FTP_PASSWORD }}
-      #     protocol: ftps
-      #     exclude: |
-      #       **/.devcontainer/**
-      #       **/.github/**
+      # https://github.com/marketplace/actions/ftp-deploy
+      - name: FTP Deploy
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.5
+        with:
+          server: {{ env.FTP_SERVER }}
+          username: {{ env.FTP_USERNAME }}
+          password: {{ secrets.FTP_PASSWORD }}
+          protocol: ftps
+          exclude: |
+            **/.devcontainer/**
+            **/.github/**
             
