--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,18 +15,31 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: 'npm'
+          cache-dependency-path: package-lock.json
       - run: npm ci
       # - run: npm run test:headless
       - run: npm run build
+      - name: Upload browser files
+        uses: actions/upload-artifact@v4
+        with:
+          name: browser_profile_ftp
+          path: dist/solthoth/browser/**
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.ref == 'refs/heads/main'
+    steps:
+      - name: Download browser files
+        uses: actions/download-artifact@v4
+        with:
+          name: browser_profile_ftp
       # https://github.com/marketplace/actions/ftp-deploy
       - name: FTP Deploy
         uses: SamKirkland/FTP-Deploy-Action@v4.3.5
         with:
-          server: {{ env.FTP_SERVER }}
-          username: {{ env.FTP_USERNAME }}
-          password: {{ secrets.FTP_PASSWORD }}
+          server: ${{ env.FTP_SERVER }}
+          username: ${{ env.FTP_USERNAME }}
+          password: ${{ secrets.FTP_PASSWORD }}
           protocol: ftps
-          exclude: |
-            **/.devcontainer/**
-            **/.github/**
             
