--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,13 +18,11 @@ jobs:
       - run: npm ci
       # - run: npm run test:headless
       - run: npm run build
-      - name: display browser files
-        run: ls -R ./dist/solthoth
       - name: Upload browser files
         uses: actions/upload-artifact@v4
         with:
           name: browser_profile_ftp
-          path: ./dist/solthoth/browser
+          path: dist/solthoth/browser/
           if-no-files-found: error
   deploy:
     runs-on: ubuntu-latest
