--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: browser_profile_ftp
-          path: dist/solthoth/browser/
+          path: ${{ github.workspace }}/solthoth/dist/solthoth/browser/
           if-no-files-found: error
   deploy:
     runs-on: ubuntu-latest
